fixed timer size bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,9 @@
 }
 
 body {
-  background: tomato;
-  color: #feffff;
+    margin: 0;
+  background: #E74C3C;
+  color: #ECF0F1;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -20,9 +21,12 @@ body {
   width: 100%;
 }
 
+.header {
+    background: #2C3E50;
+    width: 100%;
+}
 .title {
   font-size: 48px;
-  margin-bottom: 5px;
   text-align: center;
 }
 
@@ -32,27 +36,24 @@ body {
 .timer-display {
   cursor: pointer;
   text-align: center;
-  transition: background 0.7s cubic-bezier(0.57, 0.21, 0.69, 1.25);
-  margin-bottom: 5px;
 }
 
 .display__time-left {
-  font-size: 200px;
+  font-size: 100px;
   margin: 0;
 }
 
 .checkmarks {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .checkmarks span {
-  display: none;
   width: 100%;
   height: 20px;
   margin-bottom: 5px;
   text-align: center;
-  /* opacity: 0.5; */
+  opacity: 0;
   font-size: 24px;
 }
 
@@ -71,6 +72,9 @@ body {
   margin-left: auto;
   display: flex;
   flex-direction: column;
+  background: #2C3E50;
+  width: 100%;
+  padding: 1em;
 }
 
 .setting {
@@ -90,9 +94,9 @@ body {
 }
 
 .length span {
-  background: #feffff;
+  background: #ECF0F1;
   width: 40px;
-  color: tomato;
+  color: #2C3E50;
 }
 .setting input {
   text-align: center;
@@ -103,18 +107,22 @@ body {
   /* border-bottom: 1px solid #111111; */
 }
 
-.setting button {
-  color: #feffff;
+.setting button{
+  background: #3498DB;
+  margin: 0 5px;
+  color: #ECF0F1;
   border: none;
   outline: none;
 }
 
-.setting button[data-amt="+1"] {
-  background: #1f4220;
-  margin-left: 5px;
+.setting button:hover {
+    cursor: pointer;
+    background: #2980B9;
 }
 
-.setting button[data-amt="-1"] {
-  background: #c9251f;
-  /* margin-left: 5px; */
+
+@media (min-width: 768px) {
+    .display__time-left {
+        font-size: 200px;
+    }
 }
